// impl_front
plugins {
    id 'java'
    id 'org.springframework.boot' version '2.3.1.RELEASE'
    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
    id 'war'
}

repositories {
    mavenCentral()
}

configurations {
    umlDoclet
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc:2.3.1.RELEASE'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:2.3.1.RELEASE'
    implementation 'org.springframework.boot:spring-boot-starter-web:2.3.1.RELEASE'
    implementation 'org.springframework.boot:spring-boot-starter-aop:2.3.1.RELEASE'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.3.1.RELEASE'
    implementation 'org.springframework.boot:spring-boot-starter-security:2.3.1.RELEASE'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client:2.3.1.RELEASE'
    implementation 'org.springframework.boot:spring-boot-devtools'
    implementation 'org.projectlombok:lombok:1.18.10'
    implementation 'nl.talsmasoftware:umldoclet:2.0.11'
    implementation 'org.hibernate.validator:hibernate-validator:6.1.3.Final'
    runtimeOnly 'org.springframework.boot:spring-boot-devtools:2.2.4.RELEASE'
    runtimeOnly 'com.h2database:h2:1.4.200'
    runtimeOnly 'mysql:mysql-connector-java'
    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.2.4.RELEASE'
    testImplementation 'org.springframework.security:spring-security-test'
    annotationProcessor 'org.projectlombok:lombok:1.18.12'
    umlDoclet "nl.talsmasoftware:umldoclet:2.0.11"
}

group = 'app'
version = '0.0.1'
description = 'MinesO'
sourceCompatibility = '14'


bootRun {
//    jvmArgs = ['--illegal-access=deny']
}

test {
    useJUnitPlatform()
//    jvmArgs = ['--illegal-access=deny']
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

javadoc {
    source = sourceSets.main.allJava
    title = "MinesO"
    options.docletpath = configurations.umlDoclet.files.asType(List)
    options.doclet = "nl.talsmasoftware.umldoclet.UMLDoclet"
    options.encoding = 'utf-8'
    options.charSet = 'utf-8'
    destinationDir = new File("C:\\Users\\choke\\repos\\MinesO\\docs\\docsMng\\reference\\3_dd\\javadoc\\")
}